fix: [Bug]2.10.11明细表下载表头缺失 #16497